--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 .Rproj.user
 .Rhistory
-.RData
+.DS_Store
+.aux
+.Rhistory
+.bbl
+.blg
+.dvi
+.fdb_latexmk
+.fls
+.log
+.out
+.toc
+.xwm
+.gz
+.pdf
+.Rdata
+.csv
+.txt
