Add GitHub links to DESCRIPTION

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
-.Rproj.user
-.Rhistory
-.DS_Store
-.aux
-.Rhistory
-.bbl
-.blg
-.dvi
-.fdb_latexmk
-.fls
-.log
-.out
-.toc
-.xwm
-.gz
-.pdf
-.Rdata
-.csv
-.txt
+*.Rproj.user
+*.Rhistory
+*.DS_Store
+*.aux
+*.Rhistory
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.toc
+*.xwm
+*.gz
+*.pdf
+*.Rdata
+*.csv
+*.txt
