--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fasano.franceschini.test
 Title: Fasano-Franceschini Test: A 2-D Kolmogorov-Smirnov Two-Sample Test
-Version: 1.0.1.9000
+Version: 1.1.0
 Authors@R: 
     c(person(given = "Elan",
            family = "Ness-Cohn",
@@ -12,7 +12,7 @@ Authors@R:
 		email = "rbraun@northwestern.edu",
 		role = c("ctb","ths"),
 		comment = c(ORCID = "0000-0001-9668-9866")))
-Description: An implementation of the 2-D Kolmogorov-Smirnov (KS) two-sample test as defined by Fasano and Franceschini (Fasano and Franceschini 1987). The 'fasano.franceschini.test' package provides three improvements over the current 2-D KS test on the Comprehensive R Archive Network (CRAN): (i) the Fasano and Franceschini test has been shown to run in O(n^2) versus the Peacock implementation which runs in O(n^3); (ii) the package implements a procedure for handling ties in the data; and (iii) the package implements a parallelized bootstrapping procedure for improved significance testing. Ultimately, the 'fasano.franceschini.test' package presents a robust statistical test for analyzing random samples defined in 2-dimensions.
+Description: An implementation of the 2-D Kolmogorov-Smirnov (KS) two-sample test as defined by Fasano and Franceschini (Fasano and Franceschini 1987). The 'fasano.franceschini.test' package provides three improvements over the current 2-D KS test on the Comprehensive R Archive Network (CRAN): (i) the Fasano and Franceschini test has been shown to run in O(n^2) versus the Peacock implementation which runs in O(n^3); (ii) the package implements a procedure for handling ties in the data; and (iii) the package implements a parallelized permutation procedure for improved significance testing. Ultimately, the 'fasano.franceschini.test' package presents a robust statistical test for analyzing random samples defined in 2-dimensions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
