--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,6 @@
-pandoc: 2.11.4
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.3
 pkgdown_sha: ~
-articles:
-  fasano-franceschini-test: fasano-franceschini-test.html
-last_built: 2021-09-03T21:44Z
+articles: {}
+last_built: 2022-05-17T18:55Z
 
