--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ BugReports: https://github.com/nesscoder/fasano.franceschini.test/issues
 Depends: 
     R (>= 3.0.2)
 Imports: 
+    microbenchmark,
     Rcpp (>= 1.0.0),
     RcppParallel (>= 5.0.1),
     stats
@@ -36,5 +37,5 @@ LinkingTo:
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 SystemRequirements: GNU make
