--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,8 @@ Description: An implementation of the two-sample multidimensional
     probability distribution. The data can be of any dimension, and can be
     of any type (continuous, discrete, or mixed).
 License: MIT + file LICENSE
-URL: https://github.com/nesscoder/fasano.franceschini.test
-BugReports: https://github.com/nesscoder/fasano.franceschini.test/issues
+URL: https://github.com/braunlab-nu/fasano.franceschini.test
+BugReports: https://github.com/braunlab-nu/fasano.franceschini.test/issues
 Depends: 
     R (>= 3.0.2)
 Imports: 
