--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Type: Package
 Package: fasano.franceschini.test
-Title: Fasano-Franceschini Test: A Multidimensional Kolmogorov-Smirnov
+Title: Fasano-Franceschini Test: A Multivariate Kolmogorov-Smirnov
     Two-Sample Test
 Version: 2.2.2
 Authors@R: c(
@@ -13,7 +13,7 @@ Authors@R: c(
     person("Luca", "Weihs", role = "cph",
            comment = "Copyright holder and author of 'RangeTree' class.")
   )
-Description: An implementation of the two-sample multidimensional
+Description: An implementation of the two-sample multivariate
     Kolmogorov-Smirnov test described by Fasano and Franceschini (1987)
     <doi:10.1093/mnras/225.1.155>. This test evaluates the null hypothesis
     that two i.i.d. random samples were drawn from the same underlying
@@ -35,5 +35,5 @@ LinkingTo:
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 SystemRequirements: GNU make
